--- a/forexglobal/sass/style.scss
+++ b/forexglobal/sass/style.scss
@@ -10,6 +10,8 @@
 @import 'blocks/edge';
 @import 'blocks/account';
 @import 'blocks/tabs';
+@import 'blocks/license';
+@import 'blocks/quote';
 @import 'blocks/form';
 @import 'blocks/payment';
 @import 'blocks/footer';
