--- a/forexglobal/sass/blocks/title.scss
+++ b/forexglobal/sass/blocks/title.scss
@@ -1,5 +1,5 @@
 .title {
-  padding: 0 0 160px 0;
+  padding: 0 0 40px 0;
   background: #32138c url('../img/title-bg.jpg') no-repeat top;
   background-size: cover;
 }
@@ -19,7 +19,7 @@
   display: flex;
   justify-content: space-between;
   width: 770px;
-  margin: auto;
+  margin: 0 auto 130px;
   
   input {
     width: 248px;
@@ -44,11 +44,35 @@
     height: 40px;
     color: #2f2861;
     font-size: 18px;
-    font-weight: 100;
+    font-weight: 300;
     font-family: inherit;
     // font-family: 'SFUIDisplay-Thin', sans-serif;
     border: none;
     border-radius: 3px;
     background: $mc;
+  }
+}
+
+.title__down {
+  position: relative;
+  display: block;
+  width: 22px;
+  height: 12px;
+  margin: auto;
+  border: none;
+  background: url('../img/title-arrow.svg');
+  animation: down 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  cursor: pointer;
+}
+
+@keyframes down {
+  0% {
+    top: 0;
+  }
+  
+  100% {
+    top: 10px;
   }
 }
