--- a/forexglobal/css/style.css
+++ b/forexglobal/css/style.css
@@ -7,6 +7,10 @@ body {
   width: 1200px;
   margin: 0 auto; }
 
+@media screen and (max-width: 1200px) {
+  .container {
+    width: 100%; } }
+
 @font-face {
   font-family: 'SF UI Display';
   src: local("SF UI Display Thin"), local("SFUIDisplay-Thin"), url("../fonts/SFUIDisplay-Thin.woff2") format("woff2"), url("../fonts/SFUIDisplay-Thin.woff") format("woff");
@@ -141,6 +145,24 @@ body {
   100% {
     top: 10px; } }
 
+@media screen and (max-width: 1200px) {
+  .title__name {
+    padding: 300px 0 95px 0;
+    font-size: 50px; } }
+
+@media screen and (max-width: 768px) {
+  .title__form {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: auto; }
+    .title__form input {
+      margin: 0 0 15px 0; } }
+
 .header {
   position: absolute;
   top: 0;
@@ -197,6 +219,15 @@ body {
   width: 170px;
   -webkit-transition: 0.3s;
   transition: 0.3s; }
+
+.header__toggle {
+  display: none;
+  width: 25px;
+  height: 25px;
+  padding: 0;
+  font-size: 0;
+  border: none;
+  background: transparent url("../img/nav-toggle.svg") no-repeat top; }
 
 .header__user {
   display: -webkit-box;
@@ -296,6 +327,71 @@ body {
   -moz-appearance: none;
   appearance: none; }
 
+@media screen and (max-width: 1200px) {
+  .header--scroll .header__flex {
+    padding: 18px 15px 90px 18px; }
+  .header--scroll .nav {
+    top: 100px;
+    width: 100%;
+    margin: auto;
+    padding: 0; }
+  .header__container {
+    width: 100%; } }
+
+@media screen and (max-width: 768px) {
+  .header--scroll {
+    position: fixed;
+    top: 0;
+    background: rgba(47, 40, 97, 0.9);
+    z-index: 1; }
+    .header--scroll .header__flex {
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      padding: 18px 15px;
+      border: none; }
+    .header--scroll .header__logo {
+      width: 100px; }
+    .header--scroll .header__toggle {
+      display: block; }
+    .header--scroll .header__user {
+      display: none; }
+      .header--scroll .header__user li a {
+        width: 133px;
+        padding: 9px 0;
+        -webkit-transition: 0.3s;
+        transition: 0.3s; }
+    .header--scroll .header__open::before {
+      right: 5px; }
+    .header--scroll .nav__search {
+      display: none; }
+    .header--scroll .nav {
+      position: absolute;
+      top: 0;
+      padding: 28px 15px 27px 190px;
+      -webkit-transition: 0.5s;
+      transition: 0.5s; }
+  .header__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column; }
+  .header__user {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: auto;
+    margin: 20px 0 0 0; }
+    .header__user li {
+      margin: 0 0 25px 0; }
+      .header__user li:nth-child(3) {
+        margin: 0; } }
+
 .nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -370,6 +466,19 @@ body {
   .nav__search:hover input {
     opacity: 1; }
 
+@media screen and (max-width: 1200px) {
+  .nav {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; }
+  .nav__list {
+    margin: auto; }
+  .nav__search {
+    display: none; } }
+
+@media screen and (max-width: 768px) {
+  .nav {
+    display: none; } }
+
 .welcome {
   padding: 90px 0; }
 
@@ -414,6 +523,28 @@ body {
   border-radius: 3px;
   background: #fac93e; }
 
+@media screen and (max-width: 1200px) {
+  .welcome__flex {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    padding: 0 15px; }
+    .welcome__flex img {
+      display: none; }
+  .welcome__name {
+    font-size: 50px; } }
+
+@media screen and (max-width: 768px) {
+  .welcome {
+    padding: 30px 0; }
+  .welcome__content {
+    width: auto; }
+  .welcome__name {
+    font-size: 40px;
+    text-align: center; }
+  .welcome__button {
+    margin: auto; } }
+
 .edge {
   padding: 40px 0;
   background: #0c194f url("../img/edge-bg.jpg") no-repeat top;
@@ -442,6 +573,22 @@ body {
     margin: 10px 0 0 0;
     color: #fff;
     font-weight: 100; }
+
+@media screen and (max-width: 768px) {
+  .edge {
+    padding: 30px 0; }
+  .edge__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .edge__box {
+    margin: 0 0 20px 0; }
+    .edge__box:last-child {
+      margin: 0; } }
 
 .account {
   padding: 70px 0 300px 0; }
@@ -510,6 +657,40 @@ body {
   .account__box:nth-child(3) {
     background: #0e0b39 url("../img/account-demo.png") no-repeat 40px 10px;
     background-size: 300px; }
+
+@media screen and (max-width: 1200px) {
+  .account {
+    padding: 70px 0 150px 0; }
+  .account__name {
+    font-size: 50px; }
+  .account__flex {
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap; } }
+
+@media screen and (max-width: 768px) {
+  .account {
+    padding: 30px 0 100px 0; }
+  .account__name {
+    font-size: 40px; }
+  .account__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; }
+  .account__box {
+    margin: 0 0 30px 0;
+    padding: 100px 40px 50px 40px; }
+    .account__box:nth-child(1) {
+      background: #0e0b39 url("../img/account-zulu.png") no-repeat 45px -30px;
+      background-size: 256px; }
+    .account__box:nth-child(2) {
+      background: #0e0b39 url("../img/account-real.png") no-repeat 0 -40px; }
+    .account__box:nth-child(3) {
+      background: #0e0b39 url("../img/account-demo.png") no-repeat 15px 10px;
+      background-size: 300px; } }
 
 .tabs {
   height: 330px;
@@ -609,6 +790,32 @@ body {
   border: 1px solid #2f2861;
   border-radius: 3px; }
 
+@media screen and (max-width: 1200px) {
+  .tabs__flex {
+    padding: 0 15px; }
+  .tabs__mockup {
+    display: none; }
+  .tabs__inner {
+    width: 100%; } }
+
+@media screen and (max-width: 768px) {
+  .tabs {
+    height: 400px; }
+  .tabs__control {
+    width: auto;
+    margin: -34px 0 0 0; }
+    .tabs__control li button {
+      font-size: 14px; }
+  .tabs__content {
+    height: 400px; }
+  .tabs__download {
+    width: 135px;
+    margin: 0 10px 0 0;
+    font-size: 16px; }
+  .tabs__more {
+    width: 133px;
+    font-size: 16px; } }
+
 .license {
   padding: 30px 0 60px 0; }
 
@@ -673,16 +880,47 @@ body {
     background: url("../img/license-3.svg") no-repeat top;
     background-size: 120px 150px; }
 
+@media screen and (max-width: 1200px) {
+  .license__name {
+    font-size: 50px; }
+  .license__list {
+    padding: 0 15px; }
+  .license__flex {
+    padding: 0 15px; }
+  .license__box {
+    width: 230px; }
+    .license__box b {
+      font-size: 20px; } }
+
+@media screen and (max-width: 768px) {
+  .license {
+    padding: 30px 0; }
+  .license__name {
+    font-size: 40px; }
+  .license__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; } }
+
 .quote {
   padding: 65px 0;
   background-image: linear-gradient(85deg, #31266e 0%, #6420ff 100%); }
   .quote p {
+    margin: 0;
     color: #fff;
     font-size: 30px;
     font-weight: 300;
     text-align: center; }
     .quote p span {
       font-weight: 500; }
+
+@media screen and (max-width: 768px) {
+  .quote p {
+    font-size: 20px; } }
 
 .form {
   padding: 95px 0 110px;
@@ -766,6 +1004,22 @@ body {
       border: none;
       border-radius: 3px;
       background: #fac93e; }
+
+@media screen and (max-width: 768px) {
+  .form {
+    padding: 30px 0; }
+    .form form {
+      width: 240px;
+      margin: auto;
+      padding: 30px 30px 45px 30px; }
+      .form form input {
+        font-size: 14px; }
+      .form form select {
+        height: 36px;
+        font-size: 14px;
+        background: #fff url("../img/nav-arrow.svg") no-repeat center;
+        background-size: 10px;
+        background-position-x: 210px; } }
 
 .payment {
   padding: 30px 0; }
@@ -910,3 +1164,13 @@ body {
     background: url("../img/footer-gp.svg") no-repeat top; }
   .footer__link--tw {
     background: url("../img/footer-tw.svg") no-repeat top; }
+
+@media screen and (max-width: 768px) {
+  .footer__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center; } }
