--- a/forexglobal/sass/blocks/edge.scss
+++ b/forexglobal/sass/blocks/edge.scss
@@ -31,3 +31,24 @@
     // font-family: 'SFUIDisplay-Thin', sans-serif;
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .edge {
+    padding: 30px 0;
+  }
+  
+  .edge__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .edge__box {
+    margin: 0 0 20px 0;
+    
+    &:last-child {
+      margin: 0;
+    }
+  }
+}
