--- a/forexglobal/sass/blocks/form.scss
+++ b/forexglobal/sass/blocks/form.scss
@@ -92,3 +92,30 @@
     }
   }
 }
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .form {
+    padding: 30px 0;
+    
+    form {
+      width: 240px;
+      margin: auto;
+      // padding: 30px 10px 45px 10px;
+      padding: 30px 30px 45px 30px;
+      
+      input {
+        font-size: 14px;
+      }
+      
+      select {
+        height: 36px;
+        font-size: 14px;
+        background: #fff url('../img/nav-arrow.svg') no-repeat center;
+        background-size: 10px;
+        background-position-x: 210px; 
+      }
+    }
+  }
+}
