--- a/forexglobal/sass/blocks/license.scss
+++ b/forexglobal/sass/blocks/license.scss
@@ -80,3 +80,40 @@
     background-size: 120px 150px;
   }
 }
+
+@media screen and ($tablet-widths) {
+  .license__name {
+    font-size: 50px;
+  }
+  
+  .license__list {
+    padding: 0 15px;
+  }
+  
+  .license__flex {
+    padding: 0 15px;
+  }
+  
+  .license__box {
+    width: 230px;
+    
+    b {
+      font-size: 20px;
+    }
+  }
+}
+
+@media screen and ($mobile-widths) {
+  .license {
+    padding: 30px 0;
+  }
+  
+  .license__name {
+    font-size: 40px;
+  }
+  
+  .license__flex {
+    flex-direction: column;
+    align-items: center;
+  }
+}
