--- a/forexglobal/sass/blocks/quote.scss
+++ b/forexglobal/sass/blocks/quote.scss
@@ -3,6 +3,7 @@
   background-image: linear-gradient(85deg, #31266e 0%, #6420ff 100%);
   
   p {
+    margin: 0;
     color: #fff;
     font-size: 30px;
     font-weight: 300;
@@ -10,6 +11,17 @@
     
     span {
       font-weight: 500;
+    }
+  }
+}
+
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .quote {
+    
+    p {
+      font-size: 20px;
     }
   }
 }
