--- a/forexglobal/sass/global/base.scss
+++ b/forexglobal/sass/global/base.scss
@@ -9,6 +9,11 @@ body {
   margin: 0 auto;
 }
 
-@media screen and ($tablet-widths) {}
+@media screen and ($tablet-widths) {
+  .container {
+    width: 100%;
+    // background: yellow;
+  }
+}
 
 @media screen and ($mobile-widths) {}
