--- a/forexglobal/sass/blocks/footer.scss
+++ b/forexglobal/sass/blocks/footer.scss
@@ -145,5 +145,15 @@
   
   .footer__ul {
     // width: 100%;
+    
+    &--links {
+      width: 170px;
+      margin: 30px 0 0 0;
+    }
+  }
+  
+  .footer__hr {
+    width: 98%;
+    margin: 20px auto;
   }
 }
