--- a/forexglobal/sass/blocks/license.scss
+++ b/forexglobal/sass/blocks/license.scss
@@ -116,4 +116,13 @@
     flex-direction: column;
     align-items: center;
   }
+  
+  .license__list {
+    font-size: 16px;
+    
+    & + hr {
+      width: 98%;
+      margin: 30px auto 20px;
+    }
+  }
 }
