--- a/forexglobal/sass/blocks/nav.scss
+++ b/forexglobal/sass/blocks/nav.scss
@@ -91,6 +91,25 @@
 
 @media screen and ($mobile-widths) {
   .nav {
-    display: none;
+    
+    &--closed,
+    &--opened {
+      display: none;
+    }
+  }
+  
+  .nav__list {
+    flex-direction: column;
+    align-items: center;
+    // flex-wrap: wrap;
+    width: auto;
+    
+    li {
+      margin: 0 0 20px 0;
+      
+      &:last-child {
+        margin: 0;
+      }
+    }
   }
 }
