--- a/mb/css/style.css
+++ b/mb/css/style.css
@@ -693,9 +693,12 @@ body {
     -ms-flex-direction: column;
     flex-direction: column;
     width: 369px;
-    padding: 10px 56px;
+    height: 135px;
+    padding: 10px 56px 10px 56px;
     border-radius: 5px;
     background: #fff;
+    -webkit-box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.2);
     opacity: 0;
     cursor: pointer;
     -webkit-transition: 0.3s;
@@ -772,6 +775,7 @@ body {
     width: 17px;
     height: 10px;
     background: url("../img/price-arrow.png");
+    background-size: cover;
     -webkit-transition: 0.3s;
     transition: 0.3s; }
   .price__select:hover::after {
@@ -780,14 +784,35 @@ body {
   .price__select:hover .price__flex--sub {
     opacity: 1; }
 
+.price__drop {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: scroll; }
+  .price__drop li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 45px; }
+    .price__drop li b {
+      margin: 0;
+      color: #020203;
+      font-size: 20px;
+      font-family: 'ProximaNovaLight', sans-serif; }
+
 .price__value {
   padding: 0 0 0 30px; }
-  .price__value--bitcoin {
+  .price__value--up {
     background: url("../img/price-up.png") no-repeat left; }
-  .price__value--gpb {
-    background: url("../img/price-up.png") no-repeat left; }
-  .price__value--tesla {
-    background: url("../img/price-up.png") no-repeat left; }
+  .price__value--down {
+    background: url("../img/price-down.png") no-repeat left; }
 
 .price__name {
   padding: 0 0 0 30px;
@@ -1111,7 +1136,8 @@ body {
   height: 480px !important;
   text-align: center;
   -webkit-transition: 0.3s;
-  transition: 0.3s; }
+  transition: 0.3s;
+  outline: none; }
   .comment__box p {
     position: absolute;
     bottom: 0px;
