--- a/mb/js/slick/slick-theme.css
+++ b/mb/js/slick/slick-theme.css
@@ -123,6 +123,7 @@
 {
     position: absolute;
     bottom: -35px;
+    /* left: -30px; */
 
     display: block;
 
@@ -133,6 +134,7 @@
     list-style: none;
 
     text-align: center;
+    /* transform: translateX(-50%); */
 }
 .slick-dots li
 {
@@ -164,15 +166,14 @@
     border: 0;
     border-radius: 50%;
     outline: none;
-    background: #00164f;
+    background: #fff;
     
     transition: 0.2s;
 }
-.slick-dots li button:hover,
-.slick-dots li button:focus
+.slick-dots li button:hover
 {
     outline: none;
-    border: 2px solid #00164f;
+    border: 1px solid #fff;
     background: transparent;
 }
 .slick-dots li button:hover:before,
@@ -204,7 +205,7 @@
 }
 .slick-dots li.slick-active button
 {
-    border: 2px solid #00164f;
+    border: 2px solid #fff;
     background: transparent;
 }
 
@@ -229,4 +230,24 @@
 .slick-center img {
   width: 120px;
   margin-top: 30px;
+}
+
+.comment .slick-dots li button {
+  background: #00164f;
+}
+
+.comment .slick-dots li.slick-active button
+{
+    border: 2px solid #00164f;
+    background: transparent;
+}
+
+.type__flex--mobile .slick-dots li button {
+    background: #00164f;
+}
+
+.type__flex--mobile .slick-dots li.slick-active button
+{
+    border: 2px solid #00164f;
+    background: transparent;
 }
