--- a/mb/sass/blocks/filters.scss
+++ b/mb/sass/blocks/filters.scss
@@ -20,6 +20,7 @@
     width: 200px;
     padding: 5px 20px;
     font-size: 16px;
+    font-family: 'Open Sans Regular', sans-serif;
     appearance: none;
     background: url('../img/filters-arrow.png') no-repeat 180px;
   }
