--- a/mb/sass/blocks/price.scss
+++ b/mb/sass/blocks/price.scss
@@ -176,7 +176,7 @@
   }
   
   &--gpb {
-    padding: 0 0 0 50px;
+    padding: 0 0 0 40px;
     background: url('../img/price-flag.png') no-repeat left;
     background-size: contain;
   }
@@ -207,6 +207,15 @@
     
     &--select {
       flex-direction: row;
+    }
+    
+    &--mobile {
+      flex-direction: row;
+    }
+    
+    &--sub {
+      width: 252px;
+      padding: 6px 24px;
     }
   }
   
@@ -239,12 +248,40 @@
     }
     
     p {
-      margin: 30px 0 20px;
+      margin: 20px 0 20px;
     }
   }
   
   .price__select {
-    margin: 0;
+    width: 300px;
+    margin: 0 auto;
     padding: 0;
+    
+    &::after {
+      right: 7px;
+      width: 10px;
+      height: 5px;
+      background-repeat: no-repeat;
+      background-size: 10px;
+    }
+  }
+  
+  .price__value,
+  .price__name {
+    font-size: 15px !important;
+  }
+  
+  .price__drop {
+    
+    b {
+      display: block;
+    }
+  }
+  
+  .price__name {
+    
+    &--gpb {
+      padding: 0 0 0 30px;
+    }
   }
 }
